--- a/html/estilos.css
+++ b/html/estilos.css
@@ -1,4 +1,3 @@
-
 root { 
     display: block;
 }
@@ -15,9 +14,9 @@ body
 
 header
 {
-    background: url("logo.jpg") no-repeat 50% center,
+    background: url("logo.jpg") no-repeat 5% center,
 				url("fondo1.jpg");
-	/*background-size: 200px, 100px,100px;*/
+    background-size: 200px, 100px,100px;
     margin: 0 0 1em 0;
     padding: 0.5em 0;
     width: 100%;   
@@ -75,11 +74,36 @@ nav  li a:hover
     transform: scale(1.2) rotate(-10deg);
     -webkit-transform: scale(1.2) rotate(-10deg);
 }
+#coche
+{
+  background: white;
+  color: #222;
+  width: 50%;
+}
+
+#coche img
+ {
+  width: 98% ;
+  
+  text-align: right;
+  }
+  
+  #coche, #historia
+  {
+   display: inline-block;
+   vertical-align: top;
+   
+  }
 #historia
 {
-background: rgba(0,0,0,0.6);
+background: rgba(1,1,1,1.6);
 border-radius: 0.5em;
-padding:1em;
+margin: 0 2% 1em 1em;
+box-shadow: rgba(0,0,0, 0.5) 5px 5px 10px;
+/*-webkik-colums-cpunt: 2 agreagra columna */
+-webkit-column-count: 2;
+padding:0.5em;
+text-align: left;
 text-align: left;
 width: 40%;
 }
